--- a/.github/workflows/ci-cd-dummyapp.yaml
+++ b/.github/workflows/ci-cd-dummyapp.yaml
@@ -88,6 +88,17 @@ jobs:
           path: .
           if-no-files-found: error
 
+      - name: Verify and organize SBOM artifacts
+        run: |
+          if [ -f "app.json" ] && [ ! -f "sboms/app.json" ]; then
+            echo "Artifacts extracted to root, creating sboms directory..."
+            mkdir -p sboms
+            mv app.json sboms/app.json 2>/dev/null || true
+            mv app.sha256 sboms/app.sha256 2>/dev/null || true
+          fi
+          [ ! -f "sboms/app.json" ] && { echo "ERROR: SBOM file not found after download"; ls -la; exit 1; }
+          echo "SBOM file found: $(ls -lh sboms/app.json)"
+
       - name: Install kubectl
         run: |
           curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
@@ -120,7 +131,7 @@ jobs:
             --output "$RESPONSE_FILE" \
             --silent)
           
-          [ "$HTTP_CODE" != "200" ] && { echo "ERROR: SMT build failed ($HTTP_CODE)"; cat "$RESPONSE_FILE"; exit 1; }
+          [ "$HTTP_CODE" != "200" ] && [ "$HTTP_CODE" != "201" ] && { echo "ERROR: SMT build failed ($HTTP_CODE)"; cat "$RESPONSE_FILE"; exit 1; }
           
           RESPONSE_BODY=$(cat "$RESPONSE_FILE")
           echo "$RESPONSE_BODY" | jq .
@@ -158,7 +169,7 @@ jobs:
           HARDHAT_POD=$(kubectl get pods -n blockchain -l app=hardhat-node -o jsonpath='{.items[0].metadata.name}')
           [ -z "$HARDHAT_POD" ] && { echo "ERROR: Hardhat node not found"; exit 1; }
           
-          kubectl cp scripts/blockchain/store_smt_root.js "blockchain/$HARDHAT_POD:/workspace/store_smt_root.js"
+          echo "Using Hardhat pod: $HARDHAT_POD"
           IDENT="$(echo '${{ github.repository }}' | tr '[:upper:]' '[:lower:]'):${{ github.run_id }}"
           TX_OUTPUT=$(kubectl exec -n blockchain "$HARDHAT_POD" -- sh -c "cd /workspace && ADDR='$CONTRACT_ADDR' ROOT_HASH='$ROOT_HASH' SOFTWARE_DIGEST='$SOFTWARE_DIGEST' SBOM_HASH='$SBOM_HASH' IDENT='$IDENT' npx hardhat run store_smt_root.js --network localhost 2>&1")
           
