add proving client to orchestrator

--- a/k8s/sharing-sbom-system/proof-orchestrator-service-deployment.yaml
+++ b/k8s/sharing-sbom-system/proof-orchestrator-service-deployment.yaml
@@ -28,6 +28,8 @@ spec:
           value: "0.0.0.0"
         - name: MERKLE_PROOF_SERVICE_URL
           value: "http://merkle-proof-service.sharing-sbom-system.svc.cluster.local:8090"
+        - name: PROVING_SERVICE_URL
+          value: "http://proving-service.sharing-sbom-system.svc.cluster.local:8080"
         - name: IPFS_SERVICE_URL
           value: "http://ipfs-service.sharing-sbom-system.svc.cluster.local:80"
         - name: BLOCKCHAIN_CONTRACT_ADDRESS
