skip blockchain if root is already present in blockchain

--- a/.github/workflows/ci-cd-dummyapp.yaml
+++ b/.github/workflows/ci-cd-dummyapp.yaml
@@ -171,10 +171,36 @@ jobs:
           
           echo "Using Hardhat pod: $HARDHAT_POD"
           IDENT="$(echo '${{ github.repository }}' | tr '[:upper:]' '[:lower:]'):${{ github.run_id }}"
-          TX_OUTPUT=$(kubectl exec -n blockchain "$HARDHAT_POD" -- sh -c "cd /workspace && ADDR='$CONTRACT_ADDR' ROOT_HASH='$ROOT_HASH' SOFTWARE_DIGEST='$SOFTWARE_DIGEST' SBOM_HASH='$SBOM_HASH' IDENT='$IDENT' npx hardhat run store_smt_root.js --network localhost 2>&1")
           
-          TX_HASH=$(echo "$TX_OUTPUT" | tail -n1)
-          [[ ! "$TX_HASH" =~ ^0x[0-9a-fA-F]{64}$ ]] && { echo "ERROR: Invalid tx hash"; echo "Output: $TX_OUTPUT"; exit 1; }
-          echo "Transaction: $TX_HASH"
-          echo "$TX_HASH" > tx_hash.txt
+          echo "Executing blockchain script with:"
+          echo "  ADDR=$CONTRACT_ADDR"
+          echo "  ROOT_HASH=$ROOT_HASH"
+          echo "  SOFTWARE_DIGEST=$SOFTWARE_DIGEST"
+          echo "  SBOM_HASH=$SBOM_HASH"
+          echo "  IDENT=$IDENT"
+          
+          TX_OUTPUT=$(kubectl exec -n blockchain "$HARDHAT_POD" -- sh -c "cd /workspace && ADDR='$CONTRACT_ADDR' ROOT_HASH='$ROOT_HASH' SOFTWARE_DIGEST='$SOFTWARE_DIGEST' SBOM_HASH='$SBOM_HASH' IDENT='$IDENT' npx hardhat run store_smt_root.js --network localhost 2>&1") || {
+            echo "ERROR: Blockchain script execution failed"
+            echo "Full output:"
+            echo "$TX_OUTPUT"
+            exit 1
+          }
+          
+          echo "Script output:"
+          echo "$TX_OUTPUT"
+          
+          if echo "$TX_OUTPUT" | grep -q "SKIPPED"; then
+            echo "SMT root already registered, skipping blockchain write"
+            echo "SKIPPED" > tx_hash.txt
+          else
+            TX_HASH=$(echo "$TX_OUTPUT" | grep -E "^0x[0-9a-fA-F]{64}$" | tail -n1)
+            [[ -z "$TX_HASH" ]] && { 
+              echo "ERROR: Could not extract transaction hash from output"
+              echo "Full output:"
+              echo "$TX_OUTPUT"
+              exit 1
+            }
+            echo "Transaction: $TX_HASH"
+            echo "$TX_HASH" > tx_hash.txt
+          fi
 
