bench data for midterm

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,45 @@
-proving-service/target/
-data/
+
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+venv/
+ENV/
+env/
+
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+.DS_Store
+Thumbs.db
+
+target/
+Cargo.lock
+
+data/*/proofs/*.json
+data/proof_examples/*.json
+data/*/proofs_archive.tar.gz
+data/proof_examples/proofs_archive.tar.gz
+*.json.gz
+*.json.xz
