--- a/proving-service/Cargo.toml
+++ b/proving-service/Cargo.toml
@@ -16,7 +16,7 @@ actix-web = "4.4"
 actix-rt = "2.9"
 methods = { path = "./methods" }
 sbom-common = { path = "./common" }
-risc0-zkvm = "3.0"
+risc0-zkvm = { version = "3.0", features = ["metal"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sha2 = "0.10"
