--- a/.github/workflows/sbom-system-ci-cd.yaml
+++ b/.github/workflows/sbom-system-ci-cd.yaml
@@ -2,7 +2,7 @@ name: SBOM System CI/CD
 
 on:
   push:
-    branches: [main]
+    branches: [main, separate-dummy-app-and-manifest]
   workflow_dispatch:
 
 jobs:
@@ -279,202 +279,5 @@ jobs:
           if [ "${{ needs.check-deploy-needed.outputs.should_run }}" == "true" ]; then
             echo "Deploy-microservices completed successfully"
           else
-            echo "Deploy-microservices skipped, proceeding with dummyapp"
-          fi
-
-  build-and-scan:
-    needs: deploy-complete
-    runs-on: ubuntu-latest
-    outputs:
-      image_digest: ${{ steps.build.outputs.digest }}
-    steps:
-      - name: Check out repository
-        uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Extract metadata
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ secrets.DOCKER_USERNAME }}/sharing-sbom-system-app
-          tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=sha,prefix={{branch}}-
-            type=raw,value=latest,enable={{is_default_branch}}
-
-      - name: Build and push Docker image
-        id: build
-        uses: docker/build-push-action@v5
-        with:
-          context: ./dummyapp
-          file: ./dummyapp/Dockerfile
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-      - name: Create sboms directory
-        run: mkdir -p sboms
-
-      - name: Generate SBOM with Syft
-        uses: anchore/sbom-action@v0
-        with:
-          image: ${{ secrets.DOCKER_USERNAME }}/sharing-sbom-system-app:latest
-          format: cyclonedx-json
-          output-file: sboms/app.json
-
-      - name: Calculate SBOM hash
-        run: |
-          sha256sum sboms/app.json | awk '{print $1}' > sboms/app.sha256
-          echo "SBOM Hash: $(cat sboms/app.sha256)"
-
-      - name: Upload SBOM artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: sbom-and-security-reports
-          path: |
-            sboms/app.json
-            sboms/app.sha256
-          retention-days: 30
-
-  build-smt-and-store:
-    runs-on: [self-hosted, kind-cluster, blockchain]
-    needs: [build-and-scan]
-    timeout-minutes: 30
-    steps:
-      - name: Check out repository
-        uses: actions/checkout@v4
-
-      - name: Download SBOM artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: sbom-and-security-reports
-          path: .
-
-      - name: Verify and organize SBOM artifacts
-        run: |
-          if [ -f "app.json" ] && [ ! -f "sboms/app.json" ]; then
-            echo "Artifacts extracted to root, creating sboms directory..."
-            mkdir -p sboms
-            mv app.json sboms/app.json 2>/dev/null || true
-            mv app.sha256 sboms/app.sha256 2>/dev/null || true
-          fi
-          [ ! -f "sboms/app.json" ] && { echo "ERROR: SBOM file not found after download"; ls -la; exit 1; }
-          echo "SBOM file found: $(ls -lh sboms/app.json)"
-
-      - name: Install kubectl
-        run: |
-          curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
-          chmod +x kubectl
-          sudo mv kubectl /usr/local/bin/
-
-      - name: Wait for merkle-proof-service
-        run: |
-          kubectl wait --for=condition=available --timeout=300s deployment/merkle-proof-service -n sharing-sbom-system || true
-          MERKLE_PROOF_SERVICE_URL="http://merkle-proof-service.sharing-sbom-system.svc.cluster.local:8090"
-          for i in {1..30}; do
-            curl -s --max-time 5 "$MERKLE_PROOF_SERVICE_URL/health" > /dev/null 2>&1 && break
-            sleep 2
-          done
-
-      - name: Build SMT from SBOM
-        id: build_smt
-        timeout-minutes: 15
-        run: |
-          MERKLE_PROOF_SERVICE_URL="http://merkle-proof-service.sharing-sbom-system.svc.cluster.local:8090"
-          SBOM_FILE="sboms/app.json"
-          [ ! -f "$SBOM_FILE" ] && { echo "ERROR: SBOM file not found"; exit 1; }
-
-          RESPONSE_FILE=$(mktemp)
-          HTTP_CODE=$(curl -X POST "$MERKLE_PROOF_SERVICE_URL/build" \
-            -H "Content-Type: application/json" \
-            --data-binary @"$SBOM_FILE" \
-            --max-time 900 \
-            --write-out "%{http_code}" \
-            --output "$RESPONSE_FILE" \
-            --silent)
-
-          [ "$HTTP_CODE" != "200" ] && [ "$HTTP_CODE" != "201" ] && { echo "ERROR: SMT build failed ($HTTP_CODE)"; cat "$RESPONSE_FILE"; exit 1; }
-
-          RESPONSE_BODY=$(cat "$RESPONSE_FILE")
-          echo "$RESPONSE_BODY" | jq .
-
-          ROOT_HASH=$(echo "$RESPONSE_BODY" | jq -r '.root')
-          [ -z "$ROOT_HASH" ] || [ "$ROOT_HASH" == "null" ] && { echo "ERROR: Root hash not found in response"; exit 1; }
-
-          echo "root_hash=$ROOT_HASH" >> $GITHUB_OUTPUT
-          echo "SMT Root Hash: $ROOT_HASH"
-          rm -f "$RESPONSE_FILE"
-
-      - name: Read SBOM hash
-        id: sbom_hash
-        run: |
-          SBOM_HASH=$(cat sboms/app.sha256)
-          echo "sbom_hash=$SBOM_HASH" >> $GITHUB_OUTPUT
-          echo "SBOM Hash: $SBOM_HASH"
-
-      - name: Write SMT root to blockchain
-        run: |
-          CONTRACT_ADDR="0x5FbDB2315678afecb367f032d93F642f64180aa3"
-          ROOT_HASH="${{ steps.build_smt.outputs.root_hash }}"
-          SBOM_HASH="${{ steps.sbom_hash.outputs.sbom_hash }}"
-          IMAGE_DIGEST="${{ needs.build-and-scan.outputs.image_digest }}"
-
-          [[ "$IMAGE_DIGEST" == sha256:* ]] && SOFTWARE_DIGEST="${IMAGE_DIGEST#sha256:}" || SOFTWARE_DIGEST="$IMAGE_DIGEST"
-          [[ ! "$SOFTWARE_DIGEST" =~ ^[0-9a-fA-F]{64}$ ]] && { echo "ERROR: Invalid digest format"; exit 1; }
-
-          echo "Writing SMT root to blockchain:"
-          echo "  Root Hash: $ROOT_HASH"
-          echo "  Software Digest: sha256:$SOFTWARE_DIGEST"
-          echo "  SBOM Hash: $SBOM_HASH"
-          echo "  Identifier: github-ci-${{ github.run_id }}"
-
-          HARDHAT_POD=$(kubectl get pods -n blockchain -l app=hardhat-node -o jsonpath='{.items[0].metadata.name}')
-          [ -z "$HARDHAT_POD" ] && { echo "ERROR: Hardhat node not found"; exit 1; }
-
-          echo "Using Hardhat pod: $HARDHAT_POD"
-          IDENT="$(echo '${{ github.repository }}' | tr '[:upper:]' '[:lower:]'):${{ github.run_id }}"
-
-          echo "Executing blockchain script with:"
-          echo "  ADDR=$CONTRACT_ADDR"
-          echo "  ROOT_HASH=$ROOT_HASH"
-          echo "  SOFTWARE_DIGEST=$SOFTWARE_DIGEST"
-          echo "  SBOM_HASH=$SBOM_HASH"
-          echo "  IDENT=$IDENT"
-
-          TX_OUTPUT=$(kubectl exec -n blockchain "$HARDHAT_POD" -- sh -c "cd /workspace && ADDR='$CONTRACT_ADDR' ROOT_HASH='$ROOT_HASH' SOFTWARE_DIGEST='$SOFTWARE_DIGEST' SBOM_HASH='$SBOM_HASH' IDENT='$IDENT' npx hardhat run store_smt_root.js --network localhost 2>&1") || {
-            echo "ERROR: Blockchain script execution failed"
-            echo "Full output:"
-            echo "$TX_OUTPUT"
-            exit 1
-          }
-
-          echo "Script output:"
-          echo "$TX_OUTPUT"
-
-          if echo "$TX_OUTPUT" | grep -q "SKIPPED"; then
-            echo "SMT root already registered, skipping blockchain write"
-            echo "SKIPPED" > tx_hash.txt
-          else
-            TX_HASH=$(echo "$TX_OUTPUT" | grep -E "^0x[0-9a-fA-F]{64}$" | tail -n1)
-            [[ -z "$TX_HASH" ]] && { 
-              echo "ERROR: Could not extract transaction hash from output"
-              echo "Full output:"
-              echo "$TX_OUTPUT"
-              exit 1
-            }
-            echo "Transaction: $TX_HASH"
-            echo "$TX_HASH" > tx_hash.txt
+            echo "Deploy-microservices skipped"
           fi
