--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
-GITHUB_TOKEN=your-github-personal-access-token
+ABP_ACTIONS_RUNNER_APP_ID=your-github-app-id
+ABP_ACTIONS_RUNNER_APP_INSTALLATION_ID=your-github-app-installation-id
+PRIVATE_KEY_FILE=abp-actions-runner-private-key.pem
