--- a/.github/workflows/sbom-system-ci-cd.yaml
+++ b/.github/workflows/sbom-system-ci-cd.yaml
@@ -2,7 +2,7 @@ name: SBOM System CI/CD
 
 on:
   push:
-    branches: [main, separate-dummy-app-and-manifest]
+    branches: [main]
   workflow_dispatch:
 
 jobs:
