--- a/proving-service/Cargo.toml
+++ b/proving-service/Cargo.toml
@@ -16,7 +16,7 @@ actix-web = "4.4"
 actix-rt = "2.9"
 methods = { path = "./methods" }
 sbom-common = { path = "./common" }
-risc0-zkvm = "3.0"
+risc0-zkvm = { version = "3.0" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sha2 = "0.10"
@@ -26,3 +26,10 @@ tokio = { version = "1", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 once_cell = "1.19"
+
+[features]
+cuda = ["risc0-zkvm/cuda"]
+
+# Use RISC Zero's patched sha2 crate with precompile support
+[patch.crates-io]
+sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
