--- a/proving-service/common/Cargo.toml
+++ b/proving-service/common/Cargo.toml
@@ -4,9 +4,10 @@ version = "0.3.0"
 edition = "2024"
 
 [dependencies]
-sha2 = { version = "0.10", default-features = false }
+sha2 = { version = "=0.10.8", default-features = false }
+risc0-zkvm = { version = "^3.0.3", optional = true, default-features = false }
 
 [features]
 default = ["std"]
-std = []
+std = ["risc0-zkvm"]
 
