--- a/proving-service/benchmark/pyproject.toml
+++ b/proving-service/benchmark/pyproject.toml
@@ -5,4 +5,6 @@ description = "Benchmark proving service"
 requires-python = ">=3.10"
 dependencies = [
     "requests>=2.31.0",
+    "matplotlib>=3.7.0",
+    "numpy>=1.24.0",
 ]
