add readme.md for our project

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 ABP_ACTIONS_RUNNER_APP_ID=your-github-app-id
 ABP_ACTIONS_RUNNER_APP_INSTALLATION_ID=your-github-app-installation-id
 PRIVATE_KEY_FILE=abp-actions-runner-private-key.pem
+GITHUB_TOKEN=your-github-token
